--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "gh": "^2.8.9",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
