--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "serve": "webpack-dev-server --open --mode development",
-    "deploy": "gh-pages -d build"
+    "start": "webpack serve --mode development --open",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
