--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gh": "^2.8.9",
     "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.0",
