--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "gh": "^2.8.9",
     "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-minimizer-webpack-plugin": "^4.1.3",
     "image-webpack-loader": "^8.1.0",
+    "imagemin": "^9.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
